--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <div class="card-footer">
                 <button id="generate" class="btn">Generate Password</button>
             </div>
+            <div class="card-footer">
+                <button id="copybtn" class="copybtn">Copy Password</button>
+            </div>
         </div>
     </div>
     <script src="./assets/js/script.js"></script>
